[tool.poetry]
name = "cons-based-resource-alloc"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
ortools = "^9.0.9048"
uvicorn = "^0.14.0"
fastapi = "^0.65.1"
pydantic = "^1.8.2"
aiohttp = "^3.7.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
ipython = "^7.24.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
